<resources>
    <string name="app_name">Books</string>
    <string name="favourite">Favourite</string>
    <string name="description">Description :</string>
    <string name="rating">Rating</string>
    <string name="date">Date</string>
    <string name="make_as_favourite">Make As Favourite</string>
    <string name="appwidget_text">Books</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="msgTextView">Enter the type of books you prefer to read for example (Time, love, ... )</string>
    <string name="setting">Settings</string>
    <string name="publisher">Publisher :</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="makeasfav">Make As Favourite</string>
    <string name="makeasunfav">Make As UnFavourite</string>
    <string name="unfav_ques">UnFavourite it ?</string>
    <string name="unfavSuccess">UnFavourite Successfully</string>
    <string name="favSuccess">Favourite Successfully</string>
    <string name="fav">Favourite</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="subtitle">SubTitle</string>
    <string name="publisher2">publisher</string>
    <string name="year">Year</string>
    <string name="rate">Rate</string>
    <string name="overview">Overview</string>
    <string name="img2">Image2</string>
    <string name="img1">Image1</string>
    <string name="msgConfirm">Are you sure</string>
    <string name="imageposter">ImagePoster</string>
    <string name="activityCreated">Activity created</string>
    <string name="noInternet">No Internet</string>
    <string name="favBooks">Favourite Books</string>
    <string name="updateType">Update type of books</string>
    <string name="fav_and_unfav">Fav_And_UnFav</string>
    <string name="dateOut">Date :</string>
    <string name="rateOut">Rate :</string>
    <string name="descOut">Description:</string>
    <string name="rateTo">/5</string>
    <string name="pubOut">Publisher:</string>
    <string name="toolbar">Toolbar</string>
    <string name="plzwait">Loading. Please wait...</string>
    <string name="save">Save</string>
    <string name="enter_here">Enter Here</string>
    <string name="typeFilter">books</string>
    <string name="DefaultFilter">love</string>
    <string name="poster">ImagePoster</string>
    <string name="book_title">Book Title</string>
    <string name="booke_sub_title">Booke Sub Title</string>
</resources>